# obscure64

./: README.md  pyproject.toml
obscure64/: __init__.py
