[project]
name = "obscure64"
version = "0.1.0"
description = "This is a simple base64 encoder/decoder that gives you a headache. It's just a simple wrapper around the built-in base64 module."
authors = [
    { name = "vvanglro", email = "vvanglro@gmail.com" },
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/vvanglro/obscure64"
repository = "https://github.com/vvanglro/obscure64"
documentation = "https://github.com/vvanglro/obscure64"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
